feat: added AddParent handler for custom tree
